Bug #6794
closedx64 mingw: test_at(TestTime) failure
Description
x64 mingw has the following failure.
[ 5/65] TestTime#test_at = 0.00 s
- Failure:
test_at(TestTime) [c:/Users/hiroshi/work/ruby/test/ruby/test_time.rb:194]:
<-146138510344> expected but was
<1970>.
I guess Time.at(large value) fails for the following reason.
Time.at calls FileTimeToSystemTime() in localtime_r().
https://github.com/ruby/ruby/blob/trunk/win32/win32.c#L6565
Time limit is 0x8000000000000000 which is a little smaller than 8bytes(= time_t)(= long long).
http://msdn.microsoft.com/en-us/library/windows/desktop/ms724280(v=vs.85).aspx
Instead, using _localtime_64s() seems to work fine.
I changed to use _gmtime_64s() for consistency. I added declarations since mingw-w64 doesn't have these declaration.
I attached a patch.
Files
Updated by h.shirosaki (Hiroshi Shirosaki) about 14 years ago
- Subject changed from x86 mingw: test_at(TestTime) failure to x64 mingw: test_at(TestTime) failure
Updated by luislavena (Luis Lavena) about 14 years ago
- Category set to core
- Status changed from Open to Assigned
- Assignee changed from luislavena (Luis Lavena) to nobu (Nobuyoshi Nakada)
- Target version set to 2.0.0
- % Done changed from 0 to 50
=begin
Thank you Hiroshi,
I can confirm patch works:
Finished tests in 0.085005s, 764.6609 tests/s, 7411.3287 assertions/s.
65 tests, 630 assertions, 0 failures, 0 errors, 0 skips
ruby -v: ruby 2.0.0dev (2012-07-27 trunk 36551) [x64-mingw32]
Reassigning to Nobu for final consideration.
=end
Updated by nobu (Nobuyoshi Nakada) about 14 years ago
Seems working fine.
Please check in.
BTW, 32bit mingw doesn't have 64s() family?
Updated by Anonymous about 14 years ago
- Status changed from Assigned to Closed
- % Done changed from 50 to 100
This issue was solved with changeset r36556.
Hiroshi, thank you for reporting this issue.
Your contribution to Ruby is greatly appreciated.
May Ruby be with you.
win32/win32.c: fix localtime_r() on x64-mingw
-
win32/win32.c (gmtime_r): use _gmtime64_s() with x86_64-w64-mingw32.
-
win32/win32.c (localtime_r): use _localtime64_s() with
x86_64-w64-mingw32. Since FileTimeToSystemTime() seems not work with
large value under x64. Mingw-w64 doesn't have these declaration.
[ruby-core:46780] [Bug #6794]
Updated by h.shirosaki (Hiroshi Shirosaki) about 14 years ago
Thank you. Checked in.
BTW, 32bit mingw doesn't have 64s() family?
It seems that gcc 4.6.1 (tdm gcc 32bit) doesn't have _localtime64_s.
gcc 4.6.3 (rubenvb-4.6.3) i686-w64-mingw32 (32bit) has _localtime64_s.
The following page's example worked with rubenvb-4.6.3.
http://msdn.microsoft.com/en-us/library/a442x3ye(v=vs.80).aspx